# Test

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  ANALYSIS_EXECUTIVE_SUMMARY.md  ANALYSIS_INDEX.md  DOCUMENTATION_ANALYSIS_REPORT.md  Dockerfile  Jenkinsfile  LINE_BY_LINE_VERIFICATION.md  LXC_QEMU_VM_COST_BENEFIT_ANALYSIS.md  PEP8_PEP257_COMPLIANCE_REPORT.md  PYTHON_313_UPGRADE_ANALYSIS.md  README.md  VERIFICATION_EXAMPLES.md  docker-compose.base.yml  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci-cd.yml
ansible/: ansible.cfg
ansible/playbooks/: deploy.yml
app/: settings.py  urls.py
app/core/: audit.py  models.py  rbac.py
app/core/cache/: memcached.py
app/core/db/: connection.py
app/core/queue/: rabbitmq.py
ci/scripts/: promote-to-release.sh
docker/github-runner/: Dockerfile
docker/pipeline-executor/: Dockerfile
docs/: DEPLOYMENT.md
nginx/conf.d/: default.conf
requirements/: base.txt  development.txt  production.txt
src/: __init__.py
src/api/: main.py
src/core/: config.py  database.py  logging.py
src/utils/: health.py  version.py
tests/: conftest.py
tests/unit/: test_config.py
